# dpdk-power

./: meson.build
.ci/: advtool-setup.sh  linux-build.sh
.github/workflows/: build.yml
app/: meson.build
app/test/: meson.build  test_acl.c  test_atomic.c  test_cmdline.c  test_cmdline_ipaddr.c  test_cmdline_num.c  test_hash_functions.c  test_xmmt_ops.h
app/test-acl/: main.c
app/test-pmd/: config.c
buildtools/: pmdinfogen.py
config/: meson.build
config/ppc/: meson.build  ppc64le-power8-linux-at15
config/s390x/: meson.build  s390x_linux_clang_ubuntu
doc/guides/nics/features/: i40e.ini
doc/guides/rel_notes/: release_24_07.rst
drivers/: meson.build
drivers/common/mlx5/: mlx5_common.h
drivers/net/i40e/: i40e_rxtx_vec_s390x.c  meson.build
drivers/net/ixgbe/: ixgbe_rxtx.c
drivers/net/memif/: rte_eth_memif.h
drivers/net/mlx5/: mlx5_rx.c
drivers/net/octeontx/base/: octeontx_pki_var.h
examples/: meson.build
examples/l3fwd/: l3fwd_em.c  l3fwd_lpm_s390x.h  l3fwd_s390x.h
examples/l3fwd-acl/: main.c
lib/: meson.build
lib/acl/: acl_bld.c  acl_gen.c  acl_run_scalar.c  rte_acl.c  rte_acl.h
lib/eal/s390x/: meson.build  rte_cpuflags.c  rte_cycles.c  rte_hypervisor.c
lib/eal/s390x/include/: meson.build  rte_atomic.h  rte_byteorder.h  rte_cpuflags.h  rte_cycles.h  rte_io.h  rte_mcslock.h  rte_memcpy.h  rte_pause.h  rte_prefetch.h  rte_rwlock.h  rte_spinlock.h  rte_ticketlock.h  rte_vect.h
lib/hash/: rte_fbk_hash.h
lib/lpm/: meson.build  rte_lpm.h  rte_lpm6.c  rte_lpm_s390x.h
