# SPDX-License-Identifier: BSD-3-Clause
# (c) Copyright IBM Corp. 2018, 2019

subdir('include')

# 19.xx zarch patches lib/librte_eal/common/arch/s390x/meson.build:
# var was: eal_common_arch_sources
#
sources += files(
        'rte_cpuflags.c',
        'rte_cycles.c',
        'rte_hypervisor.c',
        'rte_power_intrinsics.c',
)


