# SPDX-License-Identifier: BSD-3-Clause
# (c) Copyright IBM Corp. 2018, 2019

install_headers(
	'rte_atomic.h',
	'rte_byteorder.h',
	'rte_cpuflags.h',
	'rte_cycles.h',
	'rte_io.h',
	'rte_memcpy.h',
	'rte_pause.h',
	'rte_prefetch.h',
	'rte_rwlock.h',
	'rte_spinlock.h',
	'rte_vect.h',
	subdir: get_option('include_subdir_arch'))
